--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
 markdown:     kramdown
-permalink:    pretty
+permalink:     '/blog/:year/:title/'
+
 pygments:     true
 comments: 	  true
 paginate:     5
+paginate_path: '/blog/page:num/'
+
 
 # Setup
 title:            Brandon Hubbard
