--- a/_config.yml
+++ b/_config.yml
@@ -79,3 +79,7 @@ timezone: America/Los_Angeles
 gems:
   - octopress-minify-html
   - jekyll-feed
+  - jekyll-mentions
+  - jemoji
+  - jekyll-redirect-from
+  - jekyll-sitemap
